[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "intel-sgx-ra"
version = "2.0.1"
description = "Intel SGX Remote Attestation verification library"
authors = [
    {name = "Cosmian Tech", email = "tech@cosmian.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "cryptography>=41.0.1,<42.0.0",
    "authlib>=1.2.0,<2.0.0"
]

[project.optional-dependencies]
tests = [
    "pylint>=2.17.4,<3.0.0",
    "pycodestyle>=2.10.0,<3.0.0",
    "pydocstyle>=6.3.0,<7.0.0",
    "mypy>=1.3.0,<2.0.0",
    "black>=23.3.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "pytest>=7.3.2,<8.0.0",
    "types-requests>=2.31.0,<3.0.0"
]

[project.scripts]
sgx-ra-verify = "intel_sgx_ra.cli.verify:run"
sgx-ra-utils = "intel_sgx_ra.cli.utils:run"

[tool.maturin]
python-source = "src"
module-name = "intel_sgx_ra.lib_sgx_dcap_ratls"
features = ["pyo3/extension-module"]

[tool.pylint.MAIN]
disable = [
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0902",  # too-many-instance-attributes
    "R0914",  # too-many-locals
    "R0903",  # too-few-public-methods
    "R0801",  # duplicate-code
]

[tool.isort]
profile = "black"

[tool.pytest]
testpaths = "tests"
pythonpath = "src"

[[tool.mypy.overrides]]
module = "authlib.*"
ignore_missing_imports = true
